summe changes to the html
Add some classes and new info to title.

--- a/guitars.html
+++ b/guitars.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is a page for me">
-    <title>Guitar Kings</title>
+    <link rel="stylesheet" href="/style/style.css">
+    <title>Guitar Kings | Guitars</title>
 </head>
 
 <body>
