--- a/contact.html
+++ b/contact.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="This is a page for me" />
-    <link rel="stylesheet" href="/style/style.css" />
-    <title>Guitar Kings | Contact</title>
-  </head>
 
-  <body>
-    <header>
-      <nav>
-        <a href="index.html"> Guitar Kings</a>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="guitars.html">Guitars</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section>
-        <h1>Contact Us</h1>
-      </section>
-    </main>
-    <footer>Copyright &copy;</footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="This is a page for me" />
+  <link rel="stylesheet" href="/style/style.css" />
+  <title>Guitar Kings | Contact</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <a href="index.html" class="logo"> Guitar Kings</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="guitars.html">Guitars</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h1>Contact Us</h1>
+    </section>
+  </main>
+  <footer>Copyright &copy;</footer>
+</body>
+
 </html>
