--- a/guitars.html
+++ b/guitars.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"> Guitar Kings</a>
+            <a href="index.html" class="logo"> Guitar Kings</a>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="guitars.html">Guitars</a></li>
@@ -22,61 +22,61 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="product-list">
             <h1>View Our Guitars</h1>
             <div>
                 <img src="images/product.jpg" alt="Adirondack Red">
                 <h3>Adirondack Red</h3>
                 <p>$500</p>
-                <a href="products/adirondack-red.html">View</a>
+                <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
                 <img src="images/product.jpg" alt="Adirondack Red">
                 <h3>Adirondack Red</h3>
                 <p>$500</p>
-                <a href="products/adirondack-red.html"">View</a>
-            </div>
-            <div>
-                <img src=" images/product.jpg" alt="Adirondack Red">
-                    <h3>Adirondack Red</h3>
-                    <p>$500</p>
-                    <a href="products/adirondack-red.html"">View</a>
-            </div>
-            <div>
-                <img src=" images/product.jpg" alt="Adirondack Red">
-                        <h3>Adirondack Red</h3>
-                        <p>$500</p>
-                        <a href="products/adirondack-red.html">View</a>
+                <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
                 <img src=" images/product.jpg" alt="Adirondack Red">
                 <h3>Adirondack Red</h3>
                 <p>$500</p>
-                <a href="products/adirondack-red.html">View</a>
+                <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
                 <img src=" images/product.jpg" alt="Adirondack Red">
                 <h3>Adirondack Red</h3>
                 <p>$500</p>
-                <a href="products/adirondack-red.html">View</a>
+                <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
                 <img src=" images/product.jpg" alt="Adirondack Red">
                 <h3>Adirondack Red</h3>
                 <p>$500</p>
-                <a href="products/adirondack-red.html">View</a>
+                <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
                 <img src=" images/product.jpg" alt="Adirondack Red">
                 <h3>Adirondack Red</h3>
                 <p>$500</p>
-                <a href="products/adirondack-red.html">View</a>
+                <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
                 <img src=" images/product.jpg" alt="Adirondack Red">
                 <h3>Adirondack Red</h3>
                 <p>$500</p>
-                <a href="products/adirondack-red.html">View</a>
+                <a href="products/adirondack-red.html" class="cta">View</a>
+            </div>
+            <div>
+                <img src=" images/product.jpg" alt="Adirondack Red">
+                <h3>Adirondack Red</h3>
+                <p>$500</p>
+                <a href="products/adirondack-red.html" class="cta">View</a>
+            </div>
+            <div>
+                <img src=" images/product.jpg" alt="Adirondack Red">
+                <h3>Adirondack Red</h3>
+                <p>$500</p>
+                <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
 
         </section>
