--- a/index.html
+++ b/index.html
@@ -1,98 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="This is a page for me" />
-    <link rel="stylesheet" href="/style/style.css" />
-    <title>Guitar Kings | Home</title>
-  </head>
 
-  <body>
-    <header>
-      <nav>
-        <a href="index.html"> Guitar Kings</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="This is a page for me" />
+  <link rel="stylesheet" href="/style/style.css" />
+  <title>Guitar Kings | Home</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <a href="index.html" class="logo">Guitar Kings</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="guitars.html">Guitars</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <section class="welcome">
+      <h1>Authentic Handmade Guitars</h1>
+      <a href="guitars.html" class="cta">View Guitars</a>
+    </section>
+  </header>
+  <main>
+    <section class="selling-points">
+      <div>
+        <h2>Our Guitars Are:</h2>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="guitars.html">Guitars</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li>Made with real Pennsylvanian wood</li>
+          <li>Crafted by a family-run business</li>
+          <li>Build to last a lifetime</li>
+          <li>Beautiful unique sound</li>
+          <li>Options for all music lovers</li>
         </ul>
-      </nav>
-      <section>
-        <h1>Authentic Handmade Guitars</h1>
-        <a href="guitars.html" class="cta">View Guitars</a>
-      </section>
-    </header>
-    <main>
-      <section>
-        <div>
-          <h2>Our Guitars Are:</h2>
-          <ul>
-            <li>Made with real Pennsylvanian wood</li>
-            <li>Crafted by a family-run business</li>
-            <li>Build to last a lifetime</li>
-            <li>Beautiful unique sound</li>
-            <li>Options for all music lovers</li>
-          </ul>
-        </div>
-        <img src="images/home-info.jpg" alt="Hands strumming guitar" />
-      </section>
+      </div>
+      <img src="images/home-info.jpg" alt="Hands strumming guitar" />
+    </section>
 
-      <section class="reviews">
-        <h2>Reviews</h2>
-        <div>
-          <p>
-            "Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Consequatur nulla architecto consequuntur dicta quae assumenda fugit
-            voluptate quas aliquam laudantium, accusantium perspiciatis dolore,
-            culpa vero aperiam provident dignissimos. Deleniti, repellat." - Bob
-            Wilis
-          </p>
-          <img src="images/review-bio.jpg" alt="Profile picture of Bob Wilis" />
-        </div>
-        <div>
-          <p>
-            "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi
-            facilis delectus distinctio soluta numquam. Maxime perferendis dolor
-            officia id rem, repudiandae unde laborum vitae sequi alias cumque
-            voluptate laudantium. Similique?" - Sally Oldfield
-          </p>
-          <img
-            src="images/review-bio2.jpg"
-            alt="Profile pic of Sally Oldfield"
-          />
-        </div>
-      </section>
+    <section class="reviews">
+      <h2>Reviews</h2>
+      <div>
+        <p>
+          "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Consequatur nulla architecto consequuntur dicta quae assumenda fugit
+          voluptate quas aliquam laudantium, accusantium perspiciatis dolore,
+          culpa vero aperiam provident dignissimos. Deleniti, repellat." - Bob
+          Wilis
+        </p>
+        <img src="images/review-bio.jpg" alt="Profile picture of Bob Wilis" />
+      </div>
+      <div>
+        <p>
+          "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi
+          facilis delectus distinctio soluta numquam. Maxime perferendis dolor
+          officia id rem, repudiandae unde laborum vitae sequi alias cumque
+          voluptate laudantium. Similique?" - Sally Oldfield
+        </p>
+        <img src="images/review-bio2.jpg" alt="Profile pic of Sally Oldfield" />
+      </div>
+    </section>
 
-      <section>
-        <h1>View Our Guitars</h1>
-        <div>
-          <img src="images/product.jpg" alt="Adirondack Red" />
-          <h3>Adirondack Red</h3>
-          <p>$500</p>
-          <a href="products/adirondack-red.html" class="cta">View</a>
-        </div>
-        <div>
-          <img src="images/product.jpg" alt="Adirondack Red" />
-          <h3>Adirondack Red</h3>
-          <p>$500</p>
-          <a href="products/adirondack-red.html" class="cta cta-sal">View</a>
-        </div>
-        <div>
-          <img src=" images/product.jpg" alt="Adirondack Red" />
-          <h3>Adirondack Red</h3>
-          <p>$500</p>
-          <a href="products/adirondack-red.html" class="cta">View</a>
-        </div>
-        <div>
-          <img src=" images/product.jpg" alt="Adirondack Red" />
-          <h3>Adirondack Red</h3>
-          <p>$500</p>
-          <a href="products/adirondack-red.html" class="cta cta-sal">View</a>
-        </div>
-      </section>
-    </main>
-    <footer>Copyright &copy;</footer>
-  </body>
+    <section class="featured">
+      <h1>View Our Guitars</h1>
+      <div class="featured--products">
+        <img src="images/product.jpg" alt="Adirondack Red" />
+        <h3>Adirondack Red</h3>
+        <p>$500</p>
+        <a href="products/adirondack-red.html" class="cta">View</a>
+      </div>
+      <div class="featured--products">
+        <img src="images/product.jpg" alt="Adirondack Red" />
+        <h3>Adirondack Red</h3>
+        <p>$500</p>
+        <a href="products/adirondack-red.html" class="cta cta-sal">View</a>
+      </div>
+      <div class="featured--products">
+        <img src=" images/product.jpg" alt="Adirondack Red" />
+        <h3>Adirondack Red</h3>
+        <p>$500</p>
+        <a href="products/adirondack-red.html" class="cta">View</a>
+      </div>
+      <div class="featured--products">
+        <img src=" images/product.jpg" alt="Adirondack Red" />
+        <h3>Adirondack Red</h3>
+        <p>$500</p>
+        <a href="products/adirondack-red.html" class="cta cta-sal">View</a>
+      </div>
+    </section>
+  </main>
+  <footer>Copyright &copy;</footer>
+</body>
+
 </html>
